--- a/index.html
+++ b/index.html
@@ -7,42 +7,39 @@
 <body>
     <div class="MainPrime">
         <p>this is some sample text.</p>
+        <div class="MainSecond">
+            <table class="inputsec">
+                <form>
+                    <tr>
+                        <td>
+                            <input type="email" placeholder="email"/>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <input type="text" placeholder="Username"/>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <input type="password" placeholder="Password"/>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <input type="password" placeholder="Confirm Password"/>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <button type="submit">Submit</button>
+                        </td>
+                    </tr>
+                </form>
+            </table>
+        </div>
     </div>
 
-    <div class="MianSecond">
-        <p>this is some sample text.</p>
-    </div>
 
-    <div class="inputsec">
-        <table>
-            <form>
-                <tr>
-                    <td>
-                        <input type="email" placeholder="email"/>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <input type="text" placeholder="Username"/>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <input type="password" placeholder="Password"/>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <input type="password" placeholder="Confirm Password"/>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <button type="submit">Submit</button>
-                    </td>
-                </tr>
-            </form>
-        </table>
-    </div>
 </body>
 </html>
