--- a/index.html
+++ b/index.html
@@ -2,12 +2,17 @@
 <html lang="en">
 <head>
     <title>Regester Page</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
+
 <body>
-    <div class="MainPrime">
-        <p>this is some sample text.</p>
-        <div class="MainSecond">
+    <div>
+        <div class="Main">
+            <div class="Buttons">
+                <form method="get" action="https://www.brainpickings.org/2010/09/07/what-does-it-mean-to-be-human/">
+                    <button type="submit">About us</button>
+                </form>
+            </div>
             <table class="inputsec">
                 <form>
                     <tr>
@@ -32,7 +37,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <button type="submit">Submit</button>
+                            <button id="Button" type="submit">Submit</button>
                         </td>
                     </tr>
                 </form>
