changed background of buttons class + added links to buttons

--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
 <body>
     <div>
         <div class="Main">
-            <div class="Buttons">
+            <div>
                 <form method="get" action="https://www.brainpickings.org/2010/09/07/what-does-it-mean-to-be-human/">
-                    <button type="submit">About us</button>
+                    <button class="Buttons" type="submit">About us</button>
+                </form>
+                <form method="get" action="https://dictionary.cambridge.org/us/dictionary/english/register">
+                    <button class="Buttons" type="submit">Regester</button>
                 </form>
             </div>
             <table class="inputsec">
