--- a/index.html
+++ b/index.html
@@ -6,48 +6,63 @@
 </head>
 
 <body>
-    <div>
-        <div class="Main">
-            <div>
+        <div class="Header">
                 <form method="get" action="https://www.brainpickings.org/2010/09/07/what-does-it-mean-to-be-human/">
                     <button class="Buttons" type="submit">About us</button>
                 </form>
                 <form method="get" action="https://dictionary.cambridge.org/us/dictionary/english/register">
                     <button class="Buttons" type="submit">Regester</button>
                 </form>
-            </div>
-            <table class="inputsec">
-                <form>
-                    <tr>
-                        <td>
-                            <input type="email" placeholder="email"/>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <input type="text" placeholder="Username"/>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <input type="password" placeholder="Password"/>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <input type="password" placeholder="Confirm Password"/>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <button id="Button" type="submit">Submit</button>
-                        </td>
-                    </tr>
-                </form>
-            </table>
         </div>
-    </div>
-
-
+        
+    <table class="inputsec">
+        <form>
+            <tr>
+                <td id="title">
+                    <p>Sign up!</p>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <input type="email" placeholder="email"/>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <input type="text" placeholder="Username"/>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <input type="password" placeholder="Password"/>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <input type="password" placeholder="Confirm Password"/>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <button id="Button" type="submit">Submit</button>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                <form method="get" action="">
+                    <button id="mantis" type="submit"></button>
+                </form>
+                    --
+                    <form method="get" action="">
+                        <button id="hopper" type="submit"></button>
+                    </form>
+                    --
+                    <form method="get" action="">
+                        <button id="beetle" type="submit"></button>
+                    </form> 
+                </td>
+            </tr>
+        </form>
+    </table>
 </body>
 </html>
