--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                     <button class="Buttons" type="submit">Regester</button>
                 </form>
         </div>
-        
+
     <table class="inputsec">
         <form>
             <tr>
@@ -49,17 +49,23 @@
             </tr>
             <tr>
                 <td>
-                <form method="get" action="">
-                    <button id="mantis" type="submit"></button>
-                </form>
-                    --
-                    <form method="get" action="">
-                        <button id="hopper" type="submit"></button>
-                    </form>
-                    --
-                    <form method="get" action="">
-                        <button id="beetle" type="submit"></button>
-                    </form> 
+                    <div class="tile_div">
+                        <a id="mantis" href="https://www.mantisbt.org/"><img src="./assets/mantis.png"
+                            alt="none"
+                            style="border-radius: 15px;"
+                            width="30" height="30"></a>
+
+                        <a id="beetle" href="https://www.nwf.org/Educational-Resources/Wildlife-Guide/Invertebrates/Rhinoceros-Beetles"><img src="./assets/rino-beetle.png"
+                            alt="none"
+                            style="border-radius: 15px;"
+                            width="30" height="30"></a>
+
+                        <a id="hopper" href="https://grasshopper.app/"><img src="./assets/grasshopper.png"
+                            alt="none"
+                            style="border-radius: 15px;"
+                            width="30" height="30"></a>
+                        <div class="clear"></div>
+                    </div>
                 </td>
             </tr>
         </form>
